--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,9 +23,9 @@ jobs:
       run: dotnet build --no-restore
     - name: Stop application
       run: |
-         Stop-WebAppPool allstartpro-pipeline-test
+         Stop-WebAppPool -Name allstartpro-pipeline-test
     - name: Copy build
       run: cp .\allstarpro-pipeline-test\bin\Debug\netcoreapp3.1\* C:\Applications\allstarpro-pipeline-test\
     - name: Start application
       run: |
-         Start-WebAppPool allstartpro-pipeline-test
+         Start-WebAppPool -Name allstartpro-pipeline-test
