--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,5 +24,4 @@ jobs:
       run: cp .\allstarpro-pipeline-test\bin\Debug\netcoreapp3.1\* C:\Applications\allstarpro-pipeline-test\
     - name: Start application
       shell: pwsh
-      run: |
-         Start-WebAppPool -Name allstartpro-pipeline-test
+      run: C:\actions-runner\bats\start.ps1
