--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,12 +13,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: Check
+      run: $env:PSModulePath
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
       run: dotnet build --no-restore
-    #- name: Import administration
-    #  run: Import-Module WebAdministration
     - name: Stop application
       run: |
        Stop-WebAppPool -Name allstartpro-pipeline-test
