--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Check
       run: |
           $env:PSModulePath
-          Import-Module -SkipEditionCheck WebAdministration
+         Get-Module -ListAvailable
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
